Update index.html about me

--- a/index.html
+++ b/index.html
@@ -245,11 +245,18 @@ footer a:hover{text-decoration:underline;}
   </div>
 </header>
 
-<!-- About -->
+<!-- About Section -->
 <section id="about" class="section" data-aos="fade-up">
   <div class="section-title"><h2>About Me</h2></div>
-  <p>I am a Director of Engineering and Chief Delivery Officer with extensive experience in delivering enterprise-level projects. I am passionate about technology, AI, and climbing. My focus is on building high-performing teams and solving complex challenges with creativity and impact.</p>
+  <p>
+    My journey in technology spans <strong>20 years of leading teams, tackling complex challenges, and delivering innovative solutions</strong> across industries.<br><br>
+    I thrive at the intersection of <strong>strategy and execution</strong>, where ideas become impactful realities.<br><br>
+    My enthusiasm for technology goes beyond leadership—I built this very website myself, collaborating with AI to bring my vision to life, reflecting my love for <strong>innovation and hands-on problem solving</strong>.<br><br>
+    Beyond the office, I chase new heights—literally—through my love for climbing, which fuels my <strong>resilience, creativity, and sense of adventure</strong>.<br><br>
+    I bring the same <strong>energy, curiosity, and determination</strong> to every project, every team, and every challenge I embrace.
+  </p>
 </section>
+
 
 <!-- Clients -->
 <section id="clients" class="section" data-aos="fade-up">
