--- a/index.html
+++ b/index.html
@@ -363,8 +363,9 @@ footer a:hover{text-decoration:underline;}
 <section id="contact" class="section" data-aos="fade-up">
   <div class="section-title"><h2>Contact Me</h2></div>
   <p>If you’d like to connect, collaborate, or just say hello, feel free to reach out. I love discussing technology, climbing adventures, and innovative projects.</p>
-  <p>Email me at <a href="mailto:naikshef@gmail.com">naikshef@gmail.com</a></p>
+  <p>Email me at <a href="mailto:naikshef@gmail.com">naikshef@gmail.com</a> or connect with me on <a href="https://www.linkedin.com/in/shefalinaik/" target="_blank">LinkedIn</a>.</p>
 </section>
+</div>
 
 <!-- Footer -->
 <footer>
@@ -385,11 +386,9 @@ footer a:hover{text-decoration:underline;}
 <script>
 AOS.init();
 
-// Years of experience counter
-let years = 20;
-document.getElementById('yearsCounter').innerText = years;
+document.getElementById('yearsCounter').innerText = 20;
 
-// Scroll to top button
+// Scroll to top
 let scrollBtn = document.getElementById('scrollTop');
 window.onscroll = function() {
   scrollBtn.style.display = (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) ? "block" : "none";
@@ -405,5 +404,6 @@ function closeLogoModal(){
   document.getElementById('logoModal').classList.remove('open');
 }
 </script>
+
 </body>
 </html>
