--- a/index.html
+++ b/index.html
@@ -114,23 +114,32 @@ nav{
 }
 
 /* Mobile menu */
-@media (max-width:700px){
-  .hamburger{display:flex;}
-  .nav-links{
-    position:fixed;
-    top:var(--nav-h);
-    left:0;
-    right:0;
-    background: rgba(13,17,23,0.97);
-    flex-direction:column;
-    gap:12px;
-    padding:16px 24px;
-    transform:translateY(-100%);
-    transition: transform 0.3s ease;
+@media (max-width: 700px) {
+  .hamburger {
+    display: flex;
   }
-  .nav-links.open{transform:translateY(0);}
-  .nav-links a{font-size:18px;}
+  .nav-links {
+    position: fixed;
+    top: var(--nav-h);
+    left: 0;
+    right: 0;
+    width: 100%;
+    background: rgba(13,17,23,0.97);
+    flex-direction: column;
+    gap: 12px;
+    padding: 16px 24px;
+    transform: translateY(-100%);
+    transition: transform 0.3s ease;
+    z-index: 1000; /* make sure it’s above all content */
+  }
+  .nav-links.open {
+    transform: translateY(0);
+  }
+  .nav-links a {
+    font-size: 18px;
+  }
 }
+
 
 /* Hero Section */
 header.hero{
