--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body{
 }
 .container{max-width:var(--maxw);margin:0 auto;padding:0 24px}
 
-/* Navigation Container */
+/* Navigation */
 nav {
   position: fixed;
   top: 0;
@@ -44,7 +44,7 @@ nav {
   right: 0;
   height: var(--nav-h);
   display: flex;
-  justify-content: center; /* center inner container */
+  justify-content: center;
   background: rgba(13,17,23,0.95);
   backdrop-filter: blur(6px);
   border-bottom: 1px solid rgba(255,255,255,0.05);
@@ -53,7 +53,7 @@ nav {
 
 .nav-inner {
   width: 100%;
-  max-width: var(--maxw); /* align with container width */
+  max-width: var(--maxw);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -82,11 +82,13 @@ nav {
 .brand .name .title {
   font-weight: 700;
   color: #fff;
+  font-size: 16px;
+  line-height: 1.2;
 }
 .brand .name .subtitle {
-  font-size: 12px;
+  font-size: 10px;
   color: var(--muted);
-  margin-top: 2px;
+  line-height: 1.2;
 }
 
 /* Nav Links */
@@ -146,7 +148,7 @@ nav {
     font-size: 18px;
   }
 }
-
+  
 /* Hero Section */
 header.hero{
   display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;
@@ -228,9 +230,9 @@ footer a:hover{text-decoration:underline;}
 </head>
 <body>
 
-<!-- Navigation -->
 <nav>
   <div class="nav-inner">
+    <!-- Brand / Logo -->
     <div class="brand">
       <div class="logo">SN</div>
       <div class="name">
@@ -239,8 +241,8 @@ footer a:hover{text-decoration:underline;}
       </div>
     </div>
 
-    <!-- Hamburger -->
-    <div class="hamburger">
+    <!-- Hamburger for mobile -->
+    <div class="hamburger" id="hamburger">
       <div></div>
       <div></div>
       <div></div>
