--- a/index.html
+++ b/index.html
@@ -52,14 +52,13 @@ nav{
   display:flex;align-items:center;justify-content:center;font-weight:700;color:#fff;
   box-shadow:0 6px 18px rgba(124,92,255,0.14);
 }
-.nav-links a{
-  color:var(--muted);
-  text-decoration:none;
-  font-weight:600;
-  margin-left:18px;
-  transition:color 0.2s;
+/* Desktop / default */
+.nav-links {
+  display: flex;
+  flex-wrap: nowrap; /* prevent desktop wrapping */
+  align-items: center;
 }
-.nav-links a:hover{color:var(--accent);}
+
 
 /* Hamburger for mobile */
 .hamburger {
@@ -78,12 +77,8 @@ nav{
   transition: all 0.3s;
 }
 
-/* Mobile Menu */
+/* Mobile */
 @media (max-width: 700px) {
-  .hamburger {
-    display: flex;
-  }
-
   .nav-links {
     position: fixed;
     top: var(--nav-h);
@@ -93,23 +88,20 @@ nav{
     width: 100%;
     background: rgba(13,17,23,0.97);
     flex-direction: column;
-    gap: 0; /* start with zero gap for animation */
-    padding: 16px 24px;
+    gap: 16px; /* spacing between links */
+    padding: 24px;
     transform: translateY(-100%);
     transition: transform 0.3s ease;
     z-index: 1000;
     overflow-y: auto;
   }
 
-  .nav-links.open {
-    transform: translateY(0);
-  }
-
   .nav-links a {
-    font-size: 18px;
+    display: block; /* ensures one link per line */
+    font-size: 20px;
     color: #fff;
     opacity: 0;
-    margin: 12px 0;
+    margin: 0;
     transform: translateY(-10px);
     transition: all 0.3s ease;
   }
