hamburger yet again

--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@ nav{
   justify-content: center;
   cursor: pointer;
   gap: 5px;
-  z-index: 1001;
 }
 
 .hamburger div {
@@ -88,41 +87,39 @@ nav{
   transition: all 0.3s;
 }
 
-/* Mobile menu overlay */
-@media(max-width: 768px){
+/* Mobile menu */
+@media(max-width:768px){
   .hamburger {
     display: flex;
   }
 
   .nav-links {
-    position: fixed;
-    top: 0;
+    position: absolute;
+    top: var(--nav-h);
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    right: 0;
     background: var(--bg);
     flex-direction: column;
-    align-items: flex-start; /* align links left */
-    justify-content: center;  /* center vertically */
-    padding: 40px 24px;      /* spacing from top & sides */
-    gap: 20px;
-    transform: translateX(-100%);
-    transition: transform 0.3s ease;
-    z-index: 1000;
+    align-items: flex-start;  /* links aligned left */
+    padding: 12px 24px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease;
+    gap: 12px;
   }
 
   .nav-links.open {
-    transform: translateX(0);
+    max-height: 500px; /* adjust as needed */
   }
 
   .nav-links a {
-    font-size: 24px;
-    color: #fff;
-    text-align: left;
+    margin: 8px 0;
+    font-size: 18px;
     width: 100%;
-    margin: 0;
+    color: #fff;
   }
 }
+
 
   
 /* Hero Section */
