--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ footer a:hover{text-decoration:underline;}
       <div class="logo">SN</div>
       <div class="name">
         <div class="title">Shefali Naik</div>
-        <div class="subtitle">Director of Engineering | Chief Delivery Officer | AI Enthusiast</div>
+        <div class="subtitle">Chief Delivery Officer | AI Enthusiast</div>
       </div>
     </div>
 
