--- a/index.html
+++ b/index.html
@@ -361,6 +361,48 @@ footer a:hover{text-decoration:underline;}
     <p style="color:var(--muted); margin-top:6px;">A reminder to keep moving forward, even when the journey feels long.</p>
   </div>
 </section> <!-- Gallery --> <section id="gallery" class="section" data-aos="fade-up"> <div class="section-title"><h2>Climbing Gallery</h2></div> <div class="gallery-grid"> <img src="assets/climb1.jpg" alt="Climb 1"> <img src="assets/climb2.png" alt="Climb 2"> <img src="assets/climb3.png" alt="Climb 3"> </div> </section> <!-- Contact --> <section id="contact" class="section" data-aos="fade-up"> <div class="section-title"><h2>Contact Me</h2></div> <p>Interested in connecting, collaborating, or just saying hello? I’d love to hear from you! Reach out via email or connect with me on LinkedIn.</p> <p>Email: <a href="mailto:naikshef@gmail.com">naikshef@gmail.com</a></p> <p>LinkedIn: <a href="https://www.linkedin.com/in/shefalinaik/" target="_blank">linkedin.com/in/shefalinaik/</a></p> </section>
+
+<section id="domains" class="py-12 bg-gray-50">
+  <div class="container mx-auto px-6 text-center">
+    <h2 class="text-3xl font-bold mb-6 text-gray-800">Domains I've Worked In</h2>
+    <p class="max-w-2xl mx-auto text-gray-600 mb-10">
+      Over two decades, I’ve led and delivered projects across diverse sectors — from federal programs to enterprise financial systems and educational initiatives.
+    </p>
+
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+      <div class="bg-white shadow-md rounded-2xl p-6 hover:shadow-lg transition flex flex-col items-center">
+        <i data-lucide="building" class="w-8 h-8 text-blue-600 mb-3"></i>
+        <h3 class="font-semibold text-lg text-gray-800">Federal Government</h3>
+      </div>
+
+      <div class="bg-white shadow-md rounded-2xl p-6 hover:shadow-lg transition flex flex-col items-center">
+        <i data-lucide="users" class="w-8 h-8 text-green-600 mb-3"></i>
+        <h3 class="font-semibold text-lg text-gray-800">Non-Profits & Member Associations</h3>
+      </div>
+
+      <div class="bg-white shadow-md rounded-2xl p-6 hover:shadow-lg transition flex flex-col items-center">
+        <i data-lucide="heart-pulse" class="w-8 h-8 text-red-600 mb-3"></i>
+        <h3 class="font-semibold text-lg text-gray-800">Healthcare & Medical Research</h3>
+      </div>
+
+      <div class="bg-white shadow-md rounded-2xl p-6 hover:shadow-lg transition flex flex-col items-center">
+        <i data-lucide="book-open" class="w-8 h-8 text-yellow-600 mb-3"></i>
+        <h3 class="font-semibold text-lg text-gray-800">Education & Cultural Institutions</h3>
+      </div>
+
+      <div class="bg-white shadow-md rounded-2xl p-6 hover:shadow-lg transition flex flex-col items-center">
+        <i data-lucide="credit-card" class="w-8 h-8 text-purple-600 mb-3"></i>
+        <h3 class="font-semibold text-lg text-gray-800">Financial Services</h3>
+      </div>
+
+      <div class="bg-white shadow-md rounded-2xl p-6 hover:shadow-lg transition flex flex-col items-center">
+        <i data-lucide="car" class="w-8 h-8 text-orange-600 mb-3"></i>
+        <h3 class="font-semibold text-lg text-gray-800">Automotive</h3>
+      </div>
+    </div>
+  </div>
+</section>
+
 </div> <!-- end container -->
 
 <!-- Logo Modal -->
@@ -380,6 +422,11 @@ footer a:hover{text-decoration:underline;}
     </p>
   </div>
 </footer>
+
+<script src="https://unpkg.com/lucide@latest"></script>
+<script>
+  lucide.createIcons();
+</script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script>
