--- a/index.html
+++ b/index.html
@@ -338,7 +338,52 @@ footer a:hover{text-decoration:underline;}
 </header>
 
 <!-- About --> <section id="about" class="section" data-aos="fade-up"> <div class="section-title"><h2>About Me</h2></div> <p> My journey in technology spans <strong>20 years of leading teams, tackling complex challenges, and delivering innovative solutions</strong> across industries.<br><br> I thrive at the intersection of <strong>strategy and execution</strong>, where ideas become impactful realities.<br><br> My enthusiasm for technology goes beyond leadership—I built this very website myself, collaborating with AI to bring my vision to life, reflecting my love for <strong>innovation and hands-on problem solving</strong>.<br><br> Beyond the office, I chase new heights—literally—through my love for climbing, which fuels my <strong>resilience, creativity, and sense of adventure</strong>.<br><br> I bring the same <strong>energy, curiosity, and determination</strong> to every project, every team, and every challenge I embrace. </p> </section> <!-- Clients --> <section id="clients" class="section" data-aos="fade-up"> <div class="section-title"><h2>Clients I’ve Worked With</h2></div> <div class="clients-grid"> <!-- All client logos inserted here --> <div class="client-card" onclick="openLogo('assets/us-courts-logo.png')"><img src="assets/us-courts-logo.png" alt="US Courts"></div> <div class="client-card" onclick="openLogo('assets/nara-logo.png')"><img src="assets/nara-logo.png" alt="NARA"></div> <div class="client-card" onclick="openLogo('assets/fcc-logo.png')"><img src="assets/fcc-logo.png" alt="FCC"></div> <div class="client-card" onclick="openLogo('assets/smithsonian-logo.png')"><img src="assets/smithsonian-logo.png" alt="Smithsonian"></div> <div class="client-card" onclick="openLogo('assets/mercedez.png')"><img src="assets/mercedez.png" alt="Mercedes"></div> <div class="client-card" onclick="openLogo('assets/hitachi-logo.png')"><img src="assets/hitachi-logo.png" alt="Hitachi"></div> <div class="client-card" onclick="openLogo('assets/msei.svg')"><img src="assets/msei.svg" alt="MSEI"></div> <div class="client-card" onclick="openLogo('assets/4h-logo.png')"><img src="assets/4h-logo.png" alt="4H"></div> <div class="client-card" onclick="openLogo('assets/english-language-program-logo.png')"><img src="assets/english-language-program-logo.png" alt="English Language Program"></div> <div class="client-card" onclick="openLogo('assets/acus-logo.svg')"><img src="assets/acus-logo.svg" alt="ACUS SVG"></div> <div class="client-card" onclick="openLogo('assets/some-logo.png')"><img src="assets/some-logo.png" alt="Some"></div> <div class="client-card" onclick="openLogo('assets/advisory-council-historuc-preservation-logo.png')"><img src="assets/advisory-council-historuc-preservation-logo.png" alt="Advisory Council"></div> <div class="client-card" onclick="openLogo('assets/bulletin-of-the-atomic-scientists-logo.png')"><img src="assets/bulletin-of-the-atomic-scientists-logo.png" alt="Bulletin of the Atomic Scientists"></div> <div class="client-card" onclick="openLogo('assets/distric-of-columbia-logo.png')"><img src="assets/distric-of-columbia-logo.png" alt="District of Columbia"></div> <div class="client-card" onclick="openLogo('assets/echange-network-logo.png')"><img src="assets/echange-network-logo.png" alt="Exchange Network"></div> <div class="client-card" onclick="openLogo('assets/rrb-logo.png')"><img src="assets/rrb-logo.png" alt="RRB"></div> </div> </section> <!-- Firms --> <section id="firms" class="section" data-aos="fade-up"> <div class="section-title"><h2>Firms I’ve Worked For</h2></div> <div class="clients-grid"> <div class="client-card" onclick="openLogo('assets/agileana.svg')"><img src="assets/agileana.svg" alt="Agileana"></div> <div class="client-card" onclick="openLogo('assets/patni.jpeg')"><img src="assets/patni.jpeg" alt="Patni Computer Systems"></div> <div class="client-card" onclick="openLogo('assets/Capgemini_Logo_2COL_RGB.png')"><img src="assets/Capgemini_Logo_2COL_RGB.png" alt="Capgemini"></div> <div class="client-card" onclick="openLogo('assets/barclays_155x34.svg')"><img src="assets/barclays_155x34.svg" alt="Barclays"></div> </div> </section> <!-- Logo Modal --> <div id="logoModal" onclick="closeLogoModal()"> <img id="logoModalImg" src="" alt="Client/Firm Logo"> <!-- Existing content unchanged --> <!-- (Everything in your original HTML remains as-is) --> </div> <!-- Certifications --> <section id="certs" class="section" data-aos="fade-up"> <div class="section-title"><h2>Certifications</h2></div> <div class="cert-list"> <div class="cert"> <strong>Generative AI Overview for Project Managers</strong> <div class="issuer">Project Management Institute</div> <div class="date">Issued Apr 2024</div> </div> <div class="cert"> <strong>Certified CMMI Associate</strong> <div class="issuer">ISACA</div> <div class="date">Issued Feb 2024 · Expires Feb 2027</div> </div> <div class="cert"> <strong>Executive Certification</strong> <div class="issuer">The Wharton School</div> <div class="date">Issued Oct 2022</div> </div> <div class="cert"> <strong>ITIL Foundations</strong> <div class="issuer">AXELOS Global Best Practice</div> <div class="date">Issued Jul 2022</div> </div> <div class="cert"> <strong>PMI-ACP</strong> <div class="issuer">Project Management Institute</div> <div class="date">Issued Apr 2021</div> </div> <div class="cert"> <strong>Acquia Certified Site Builder - Drupal 8</strong> <div class="issuer">Acquia</div> <div class="date">Issued Aug 2018</div> </div> <div class="cert"> <strong>Certified Scrum Product Owner</strong> <div class="issuer">Scrum Alliance</div> <div class="date">Issued Dec 2016</div> </div> <div class="cert"> <strong>PMP</strong> <div class="issuer">Project Management Institute</div> <div class="date">Issued Aug 2016</div> </div> <div class="cert"> <strong>Certified Scrum Master</strong> <div class="issuer">Scrum Alliance</div> <div class="date">Issued Feb 2016 · Expired Feb 2018</div> </div> <div class="cert"> <strong>SAFe® Agilist</strong> <div class="issuer">SAFe by Scaled Agile, Inc.</div> <div class="date">Issued Aug 2016 · Expired Aug 2017</div> </div> </div> </section> <!-- Quote --> <!-- Quotes Section -->
-<section id="quote" class="section" data-aos="fade-up">
+<section id="domains" class="py-12 bg-gray-50">
+  <div class="max-w-6xl mx-auto px-6">
+    <!-- Section Heading -->
+    <h2 class="text-3xl font-semibold text-gray-800 mb-8 text-center">
+      Domains I’ve Worked In
+    </h2>
+
+    <!-- Domains Grid -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      
+      <!-- Domain Card -->
+      <div class="flex items-center bg-white shadow-md rounded-xl p-5 hover:shadow-lg transition">
+        <i data-lucide="landmark" class="w-6 h-6 text-blue-600 mr-3"></i>
+        <span class="text-gray-700 font-medium">Federal Government</span>
+      </div>
+
+      <div class="flex items-center bg-white shadow-md rounded-xl p-5 hover:shadow-lg transition">
+        <i data-lucide="users" class="w-6 h-6 text-blue-600 mr-3"></i>
+        <span class="text-gray-700 font-medium">Non-Profits & Member Associations</span>
+      </div>
+
+      <div class="flex items-center bg-white shadow-md rounded-xl p-5 hover:shadow-lg transition">
+        <i data-lucide="stethoscope" class="w-6 h-6 text-blue-600 mr-3"></i>
+        <span class="text-gray-700 font-medium">Healthcare & Medical Research</span>
+      </div>
+
+      <div class="flex items-center bg-white shadow-md rounded-xl p-5 hover:shadow-lg transition">
+        <i data-lucide="book-open" class="w-6 h-6 text-blue-600 mr-3"></i>
+        <span class="text-gray-700 font-medium">Education & Cultural Institutions</span>
+      </div>
+
+      <div class="flex items-center bg-white shadow-md rounded-xl p-5 hover:shadow-lg transition">
+        <i data-lucide="credit-card" class="w-6 h-6 text-blue-600 mr-3"></i>
+        <span class="text-gray-700 font-medium">Financial Services</span>
+      </div>
+
+      <div class="flex items-center bg-white shadow-md rounded-xl p-5 hover:shadow-lg transition">
+        <i data-lucide="car" class="w-6 h-6 text-blue-600 mr-3"></i>
+        <span class="text-gray-700 font-medium">Automotive</span>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+  <section id="quote" class="section" data-aos="fade-up">
   <div class="section-title">
     <h2>Quotes That Inspire Me</h2>
   </div>
@@ -362,46 +407,6 @@ footer a:hover{text-decoration:underline;}
   </div>
 </section> <!-- Gallery --> <section id="gallery" class="section" data-aos="fade-up"> <div class="section-title"><h2>Climbing Gallery</h2></div> <div class="gallery-grid"> <img src="assets/climb1.jpg" alt="Climb 1"> <img src="assets/climb2.png" alt="Climb 2"> <img src="assets/climb3.png" alt="Climb 3"> </div> </section> <!-- Contact --> <section id="contact" class="section" data-aos="fade-up"> <div class="section-title"><h2>Contact Me</h2></div> <p>Interested in connecting, collaborating, or just saying hello? I’d love to hear from you! Reach out via email or connect with me on LinkedIn.</p> <p>Email: <a href="mailto:naikshef@gmail.com">naikshef@gmail.com</a></p> <p>LinkedIn: <a href="https://www.linkedin.com/in/shefalinaik/" target="_blank">linkedin.com/in/shefalinaik/</a></p> </section>
 
-<section id="domains" class="py-12 bg-gray-50">
-  <div class="container mx-auto px-6 text-center">
-    <h2 class="text-3xl font-bold mb-6 text-gray-800">Domains I've Worked In</h2>
-    <p class="max-w-2xl mx-auto text-gray-600 mb-10">
-      Over two decades, I’ve led and delivered projects across diverse sectors — from federal programs to enterprise financial systems and educational initiatives.
-    </p>
-
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-      <div class="bg-white shadow-md rounded-2xl p-6 hover:shadow-lg transition flex flex-col items-center">
-        <i data-lucide="building" class="w-8 h-8 text-blue-600 mb-3"></i>
-        <h3 class="font-semibold text-lg text-gray-800">Federal Government</h3>
-      </div>
-
-      <div class="bg-white shadow-md rounded-2xl p-6 hover:shadow-lg transition flex flex-col items-center">
-        <i data-lucide="users" class="w-8 h-8 text-green-600 mb-3"></i>
-        <h3 class="font-semibold text-lg text-gray-800">Non-Profits & Member Associations</h3>
-      </div>
-
-      <div class="bg-white shadow-md rounded-2xl p-6 hover:shadow-lg transition flex flex-col items-center">
-        <i data-lucide="heart-pulse" class="w-8 h-8 text-red-600 mb-3"></i>
-        <h3 class="font-semibold text-lg text-gray-800">Healthcare & Medical Research</h3>
-      </div>
-
-      <div class="bg-white shadow-md rounded-2xl p-6 hover:shadow-lg transition flex flex-col items-center">
-        <i data-lucide="book-open" class="w-8 h-8 text-yellow-600 mb-3"></i>
-        <h3 class="font-semibold text-lg text-gray-800">Education & Cultural Institutions</h3>
-      </div>
-
-      <div class="bg-white shadow-md rounded-2xl p-6 hover:shadow-lg transition flex flex-col items-center">
-        <i data-lucide="credit-card" class="w-8 h-8 text-purple-600 mb-3"></i>
-        <h3 class="font-semibold text-lg text-gray-800">Financial Services</h3>
-      </div>
-
-      <div class="bg-white shadow-md rounded-2xl p-6 hover:shadow-lg transition flex flex-col items-center">
-        <i data-lucide="car" class="w-8 h-8 text-orange-600 mb-3"></i>
-        <h3 class="font-semibold text-lg text-gray-800">Automotive</h3>
-      </div>
-    </div>
-  </div>
-</section>
 
 </div> <!-- end container -->
 
